@@ -72,6 +72,6 @@ advice from friends like these:
  Michal Marek, Robson Braga Araujo, Ian Turner, Linus Nielsen Feltzing,
  Ravi Pratap, Adam D. Moss, Jose Kahan, Hang Kin Lau, Justin Fletcher,
  Robert Iakobashvili, Bryan Henderson, Eygene Ryabinkin, Daniel Johnson,
- Matt Kraai, Nick Zitzmann
+ Matt Kraai, Nick Zitzmann, Rob Jones
 
         Thanks! (and sorry if I forgot to mention someone)
