@@ -6,6 +6,9 @@
 
                                   Changelog
 
+Daniel S (3 April 2007)
+- Rob Jones fixed better #ifdef'ing for a bunch of #include lines.
+
 Daniel S (2 April 2007)
 - Nick Zitzmann made the CURLOPT_POSTQUOTE option work for SFTP as well. The
   accepted commands are as follows:
